--- a/app/src/main/res/layout/mydialog.xml
+++ b/app/src/main/res/layout/mydialog.xml
@@ -68,7 +68,7 @@
         <TextView
             android:text="@string/txt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <EditText
 
@@ -78,15 +78,26 @@
 
     </LinearLayout>
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_weight="1"
+        android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <Button
+            android:layout_weight="1"
             android:textAlignment="center"
             android:id="@+id/btnset"
             android:text="@string/set"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <Button
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:id="@+id/btncancel"
+            android:text="@string/cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 
