--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:text="@string/Help"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="-8dp"
 
             android:layout_weight="1" />
 
@@ -27,6 +28,7 @@
             android:text="@string/View"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="-8dp"
 
             android:layout_weight="1" />
 
@@ -34,6 +36,7 @@
             android:text="@string/Setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="-8dp"
 
             android:layout_weight="1" />
 
@@ -41,6 +44,7 @@
             android:text="@string/Edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="-8dp"
 
             android:layout_weight="1" />
 
